--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,1 +1,6 @@
-<h1 class="text-center">Alurapic</h1>
+<div class="jumbotron">
+    <h1 class="text-center">Alurapic</h1>
+</div>
+<div class="container">
+    <foto *ngFor="let foto of fotos" titulo="{{foto.titulo}}" url="{{foto.url}}"></foto>
+</div>
