Adds routes in application

--- a/client/app/listagem/listagem.component.html
+++ b/client/app/listagem/listagem.component.html
@@ -4,6 +4,20 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-md-12">
+            <form>
+                    <div class="input-group">
+                    <span class="input-group-btn">
+                        <a [routerLink]="['/cadastro']" class="btn btn-primary">
+                            Nova foto
+                        </a>
+                    </span>
+                </div> 
+            </form>
+        </div> <!-- fim col-md-12 -->
+    </div> <!-- fim row -->
+    <br>
+    <div class="row">
         <painel *ngFor="let foto of fotos" titulo="{{foto.titulo}}" class="col-md-2">
             <foto titulo="{{foto.titulo}}" url="{{foto.url}}"></foto>
         </painel>
