Adding validation in forms

--- a/client/app/cadastro/cadastro.component.html
+++ b/client/app/cadastro/cadastro.component.html
@@ -1,26 +1,66 @@
 <div class="container">
+        <h1 class="text-center">{{foto.titulo}}</h1>
 
-        <form (submit)="cadastrar($event)" class="row">
+        <form [formGroup]="meuForm" (submit)="cadastrar($event)" class="row">
             <div class="col-md-6">
+
                 <div class="form-group">
                     <label>Título</label>
-                    <input name="titulo" [(ngModel)]="foto.titulo" class="form-control"  autocomplete="off">    
+                
+                    <input  
+                        name="titulo" 
+                        [(ngModel)]="foto.titulo" 
+                        formControlName="titulo" 
+                        class="form-control"  autocomplete="off">
+
+                    <div *ngIf="!meuForm.controls.titulo.valid">
+    
+                        <span *ngIf="meuForm.controls.titulo.errors.required" class="form-control alert-danger">
+                            Título obrigatório
+                        </span>
+    
+                        <span *ngIf="meuForm.controls.titulo.errors.minlength" class="form-control alert-danger">
+                            Título deve ter no mínimo 4 caracteres
+                        </span>     
+    
+                    </div>
                 </div>
+                
                 <div class="form-group">
                     <label>URL</label>
-                    <input name="url" [(ngModel)]="foto.url" class="form-control"  autocomplete="off">
+                
+                    <input 
+                        name="url"  
+                        [(ngModel)]="foto.url"  
+                        formControlName="url" 
+                        class="form-control"  
+                        autocomplete="off">
+                    
+                    <span *ngIf="meuForm.controls.url.invalid" class="form-control alert-danger">
+                        URL obrigatória
+                    </span>     
                 </div>
+                
                 <div class="form-group">
                     <label>Descrição</label>
-                    <textarea name="descricao" [(ngModel)]="foto.descricao" class="form-control"  autocomplete="off">
+
+                    <textarea 
+                        name="descricao"  
+                        [(ngModel)]="foto.descricao"  
+                        formControlName="descricao" 
+                        class="form-control">
                     </textarea>
                 </div>
     
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary" [disabled]="meuForm.invalid">
                     Salvar
                 </button>
                 <a [routerLink]="['']" class="btn btn-primary">Voltar</a>
                 <hr>
+            </div>
+            <div class="col-md-6">
+                <foto url="{{foto.url}}" titulo="{{foto.titulo}}">
+                </foto>
             </div>
         </form>
     </div>
